Wed Jun 13 04:53:02 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: pdftotext outputs a formfeed between each page, which
	  messes up our "empty body" check, so trim any trailing formfeeds
	  before the check.

Sat Jun 09 06:04:44 GMT 2012  Olly Betts <olly@survex.com>

	* Cherry pick changes from Mihai Bivol's GSoC snippets branch:
	* omindex.cc: Add option for the document sample size.
	* omindex.cc: Add short option for sample-size
	* omindex.cc: Make sample-size consistent with max-size

Sat Jun 02 12:23:21 GMT 2012  Olly Betts <olly@survex.com>

	* INSTALL,Makefile.am,cgiparam.cc,configfile.cc,configure.ac,
	  htmlparse.cc,omindex.cc,query.cc: Change `...' quoting in prose to
	  '...'.

Thu May 17 12:53:07 GMT 2012  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.h: Change parsing of
	  multiple <body> tags and text outside of <body> to match the
	  behaviour if modern web browsers.  (ticket#599)

Tue May 15 12:46:15 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Set link_all_deplibs_CXX=no on freebsd and openbsd,
	  like we already do for xapian-core.

Tue May 15 11:29:53 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2.10.

Tue May 08 11:39:28 GMT 2012  Olly Betts <olly@survex.com>

	* runfilter.cc: Add cast to rlim_t, required for C++11 compatibility
	  according to new error from GCC 4.7 (reported by Gaurav Arora).

Tue May 08 11:32:48 GMT 2012  Olly Betts <olly@survex.com>

	* tmpdir.cc: Add safeunistd.h for rmdir, required by GCC 4.7 (reported
	  by Gaurav Arora).

Sat Apr 14 00:14:58 GMT 2012  Olly Betts <olly@survex.com>

	* atomparse.cc: For type="html", use the charset of the XML rather
	  than utf-8.

Fri Apr 13 23:36:48 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,atomparse.cc,atomparse.h,overview.rst,omindex.cc: Add
	  support for atom feed files, patch from Mihai Bivol in ticket#595.
	* Makefile.am,atomparsetest.cc: Add tests for AtomParser.
