@@ -63,6 +63,7 @@
 #include "utils.h"
 #include "values.h"
 #include "xmlparse.h"
+#include "xlsxparse.h"
 #include "xpsxmlparse.h"
 
 #include "gnu_getopt.h"
@@ -575,6 +576,7 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    }
 	} else if (startswith(mimetype, "application/vnd.openxmlformats-officedocument.")) {
 	    const char * args = NULL;
+	    const char * args_xlsx = NULL;
 	    string tail(mimetype, 46);
 	    if (startswith(tail, "wordprocessingml.")) {
 		// unzip returns exit code 11 if a file to extract wasn't found
@@ -583,6 +585,7 @@ index_mimetype(const string & file, const string & url, const string & ext,
 		args = " word/document.xml word/header\\*.xml word/footer\\*.xml 2>/dev/null||test $? = 11";
 	    } else if (startswith(tail, "spreadsheetml.")) {
 		args = " xl/sharedStrings.xml";
+		args_xlsx = " xl/worksheets/sheet\\*.xml 2>/dev/null||test $? = 11";
 	    } else if (startswith(tail, "presentationml.")) {
 		// unzip returns exit code 11 if a file to extract wasn't found
 		// which we want to ignore, because there may be no notesSlides
@@ -602,6 +605,19 @@ index_mimetype(const string & file, const string & url, const string & ext,
 	    } catch (ReadError) {
 		skip_cmd_failed(file, cmd);
 		return;
+	    }
+
+	    if (args_xlsx) {
+		cmd = "unzip -p " + safefile + args_xlsx;
+		try {
+		    XlsxParser parser;
+		    parser.parse_html(stdout_to_string(cmd));
+		    if (!dump.empty()) dump += ' ';
+		    dump += parser.dump;
+		} catch (ReadError) {
+		    // It's probably best to index the document even if this
+		    // fails.
+		}
 	    }
 
 	    cmd = "unzip -p " + safefile + " docProps/core.xml";
